# ComfyUI-InstantID

./: InstantIDNode.py  README.md  __init__.py  pipeline_stable_diffusion_xl_instantid.py  pyproject.toml  requirements.txt  style_template.py
.github/: FUNDING.yml
INSTANTID WORKFLOWS/: README.md  V1.0 InstantID + ArtGallery【Zho】.json  V1.0 InstantID_fromhub【Zho】.json  V1.0 InstantID_locally【Zho】.json  V2.0 InstantID_fromhub_pose_ref【Zho】.json  V2.0 InstantID_locally_pose_ref【Zho】.json  V2.0 InstantID_pose_ref + ArtGallery 【Zho】.json
ip_adapter/: attention_processor.py
models/antelopev2/: 1k3d68.onnx  2d106det.onnx  genderage.onnx  glintr100.onnx  scrfd_10g_bnkps.onnx
